--- a/Lecture09-Pandas-Data-Manipulation.slides.html
+++ b/Lecture09-Pandas-Data-Manipulation.slides.html
@@ -13326,7 +13326,9 @@ a.anchor-link {
 <span class="c1"># read in different parts of data</span>
 <span class="c1"># please change your PATH to `&#39;/srv/data/my_shared_data_folder/ba505-data/concat_1.csv&#39;`</span>
 <span class="n">df1</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">&#39;./data/concat_1.csv&#39;</span><span class="p">)</span>
+<span class="c1"># please change your PATH to `&#39;/srv/data/my_shared_data_folder/ba505-data/concat_2.csv&#39;`</span>
 <span class="n">df2</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">&#39;./data/concat_2.csv&#39;</span><span class="p">)</span>
+<span class="c1"># please change your PATH to `&#39;/srv/data/my_shared_data_folder/ba505-data/concat_3.csv&#39;`</span>
 <span class="n">df3</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">&#39;./data/concat_3.csv&#39;</span><span class="p">)</span>
 
 <span class="n">df1</span>
@@ -15380,6 +15382,7 @@ To retain the current behavior and silence the warning, pass &#39;sort=True&#39;
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># read-in different sets</span>
 <span class="c1"># please change your PATH to `&#39;/srv/data/my_shared_data_folder/ba505-data/DATA&#39;`</span>
+<span class="c1"># change `DATA` to different file names below</span>
 <span class="n">person</span><span class="o">=</span><span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">&#39;./data/survey_person.csv&#39;</span><span class="p">)</span>
 <span class="n">site</span><span class="o">=</span><span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">&#39;./data/survey_site.csv&#39;</span><span class="p">)</span>
 <span class="n">survey</span><span class="o">=</span><span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">&#39;./data/survey_survey.csv&#39;</span><span class="p">)</span>
